src/z80asm/z80asm2/t/30-directive/expected/binary_03.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/binary_03.asm
Assembling t/30-directive/input/binary_03.asm...
t/30-directive/input/binary_03.asm:1:29: error: Unexpected token after BINARY: extra
    binary "file_not_found.bin" extra
                                ^
t/30-directive/input/binary_03.asm:1:8: error: File not found: file_not_found.bin
    binary "file_not_found.bin" extra
           ^
